--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <!--
@@ -272,7 +272,10 @@ This sample page was also "borrowed" from Sparkle (IIRC), so:
 	</tr>
 	<tr>
 		<td valign="top">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			<p>Fixed error generating PDF reports.</p>
+            <p>Error reparado en la generación de informes en PDF.</p>
+            <p>Correction d'un bug dans la génération de rapports PDF.</p>
+            <p>Bug corrigido na geração de relatórios em PDF.</p>
 		</td>
 	</tr>
 
@@ -285,7 +288,10 @@ This sample page was also "borrowed" from Sparkle (IIRC), so:
 	</tr>
 	<tr>
 		<td valign="top">
-			<p>Nunc nulla lectus, iaculis at suscipit ac, consequat a dolor.</p>
+			<p>Added 3D avatars display features.</p>
+            <p>Añadidas funcionalidades de visualización de avatares 3D.</p>
+            <p>Affichage ajoutée dispose avatars 3D.</p>
+            <p>Adicionado exibição apresenta avatares em 3D.</p>
 		</td>
 	</tr>
 
@@ -297,7 +303,10 @@ This sample page was also "borrowed" from Sparkle (IIRC), so:
 	</tr>
 	<tr>
 		<td valign="top">
-			<p>Aliquam erat volutpat. Nunc non libero quis libero vehicula ornare.</p>
+			<p>Interface changes to database management.</p>
+            <p>Cambios de interfaz en gestión de bases de datos.</p>
+            <p>Interface changements à la gestion de base de données.</p>
+            <p>Muda a interface de gerenciamento de banco de dados.</p>
 		</td>
 	</tr>
 
